Running late for haircut - optimisations and improvements